--- a/styles.css/styles.css
+++ b/styles.css/styles.css
@@ -1,77 +1,143 @@
 :root {
-    --main-title-color:#ffffff;
-    --second-title-color:#212121;
-    --main-text-color:#757575;
-    --second-text-color:#2196F3;
-    --third-text-color: rgba(255, 255, 255, 0.6);
-    --fourth-text-color: #212121;
-    --accent-color: #2196F3;
-    --main-btn-color:#ffffff;
-    --second-btn-color:#2196F3;
-    --header-text-color:#212121;
+  --main-title-color: #ffffff;
+  --second-title-color: #212121;
+  --main-text-color: #757575;
+  --second-text-color: #2196f3;
+  --third-text-color: rgba(255, 255, 255, 0.6);
+  --fourth-text-color: #212121;
+  --accent-color: #2196f3;
+  --main-btn-color: #ffffff;
+  --second-btn-color: #2196f3;
+  --header-text-color: #212121;
 }
-body{
-    font: "Roboto"optional;
+body {
+  font: "Roboto" optional;
 }
-.list{
-    list-style: none;
+.list {
+  list-style: none;
 }
-.link{
-    text-decoration: none;
-} 
+.link {
+  text-decoration: none;
+}
 /*-----------header------------------------------*/
-.header-link{
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--header-text-color);
+.header-link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--header-text-color);
 }
 .header-link:hover,
-.header-link:focus{
-    color:var(--accent-color);
+.header-link:focus {
+  color: var(--accent-color);
 }
 .header-contact:hover,
-.header-contact:focus{
-    color:var(--accent-color);}
+.header-contact:focus {
+  color: var(--accent-color);
+}
 
-.header-contact{
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--main-text-color);
+.header-contact {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--main-text-color);
 }
 /*-----------banner------------------------------*/
-.baner{
-    background-color:#2F303A;
+.baner {
+  background-color: #2f303a;
 }
-h1{
-    font-style: normal;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 60px;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: var(--main-title-color);
+h1 {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 60px;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--main-title-color);
 }
-.btn-baner{ 
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 30px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.06em;
-    color:var(--main-title-color);
-    background-color: var(--second-btn-color);
-    /*---пока не понятно надо ли---/*/
-    /*position: absolute;
+.btn-baner {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 30px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--main-title-color);
+  background-color: var(--second-btn-color);
+  /*---пока не понятно надо ли---/*/
+  /*position: absolute;
     width: 200px;
     height: 50px;
     left: 700px;
     top: 430px;*/
-    /*---пока не понятно надо ли---/*/
+  /*---пока не понятно надо ли---/*/
+}
+/*--------------список под банером---------------*/
+.under-baner {
+}
+.un-bn-li {
+}
+.about-title {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--second-title-color);
+}
+.about-after-title {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--main-text-color);
+}
+/*----------------------чем мы занимаемся/наша команда---------------------*/
+.about-us {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 42px;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--second-title-color);
+}
+.name-co-worker {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--fourth-text-color);
+}
+.position-co-worker {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--main-text-color);
+}
+/*-------------футер----------------------------/*/
+footer {
+  background-color: #2f303a;
+}
+.logo {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 31px;
+  letter-spacing: 0.03em;
+  color: var(--second-text-color);
+}
+.logo-word-footer {
+  color: var(--main-title-color);
+}
+.logo-word-header {
+  color: var(--second-title-color);
 }
