--- a/styles.css/styles.css
+++ b/styles.css/styles.css
@@ -141,3 +141,19 @@ footer {
 .logo-word-header {
   color: var(--second-title-color);
 }
+.footer-addres {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--main-title-color);
+}
+.footer-contakts {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--third-text-color);
+}
