--- a/styles.css/styles.css
+++ b/styles.css/styles.css
@@ -21,7 +21,8 @@ body {
 }
 /*-----------header------------------------------*/
 .header-link {
-  font-weight: 500;
+  font-weight: bold;
+  /*font-weight: 500;*/
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
