--- a/styles.css/styles.css
+++ b/styles.css/styles.css
@@ -11,6 +11,7 @@
   --header-text-color: #212121;
 }
 body {
+  font-family: "Roboto", sans-serif;
   font: "Roboto" optional;
 }
 .list {
@@ -128,7 +129,7 @@ footer {
   background-color: #2f303a;
 }
 .logo {
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 26px;
