--- a/styles.css/styles.css
+++ b/styles.css/styles.css
@@ -78,11 +78,11 @@ h1 {
     top: 430px;*/
   /*---пока не понятно надо ли---/*/
 }
+.btn-baner:hover,
+.btn-baner:focus {
+  background-color: #188ce8;
+}
 /*--------------список под банером---------------*/
-.under-baner {
-}
-.un-bn-li {
-}
 .about-title {
   font-weight: bold;
   font-size: 14px;
